--- a/index.html
+++ b/index.html
@@ -415,7 +415,6 @@
                     <form class="modal-form-follow">
                         <label class="modal-form-follow-field">
                             <input
-                            class="subscription-mail"
                             type="email" 
                             class="modal-form-input-follow" 
                             required 
@@ -430,8 +429,6 @@
                                 <use href="./img/sprite.svg#icon-send"></use>
                             </svg>
                         </button>
-
-
                     </form>
             </div>
 
@@ -509,11 +506,9 @@
                     <svg class="modal-form-own-checkbox" width="16" height="15">
                         <use class="modal-form-own-checkbox-icon" href="./img/sprite.svg#icon-check"></use>
                     </svg>
-                    <span class="modal-check-policy">Погоджуюся з розсилкою та приймаю з&nbsp;<a class="modal-check-policy-link" href="">Умови договору</a></span>
+                    <span class="modal-check-policy">Погоджуюся з розсилкою та приймаю з&nbsp;<a class="modal-check-policy-link link" href="">Умови договору</a></span>
                 </label>
-                <button type="submit" class="modal-form-submit-follow">Відправити</button>
-
-
+                <button type="submit" class="modal-form-submit">Відправити</button>
             </form>
         </div>
     </div>
